[package]
name = "forint"
version = "0.1.0-alpha1"
authors = ["Derek F. <https://github.com/ErisianArchitect>"]
edition = "2021"
description = "A proc macro for invoking macros for each integer type."
repository = "https://github.com/ErisianArchitect/forint"
license-file = "LICENSE"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.93", features = ["span-locations"] }
quote = "1.0.38"
syn = { version = "2.0.96", features = ["extra-traits", "full"] }